--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
       <h1>where to buy</h1>
 
-<iframe src="" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe class="map" src=""  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       <h1>upcoming cars</h1>
       <div class="cars_div">
         <a href="" class="car_a" id="37"><img src="style/img/1.jpg" alt=""><h2>model_name</h2></a>
